@@ -2,17 +2,14 @@ package lyc.compiler;
 
 import java_cup.runtime.Symbol;
 import lyc.compiler.factories.ParserFactory;
-import org.apache.commons.io.IOUtils;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 
 import static com.google.common.truth.Truth.assertThat;
-import static lyc.compiler.Constants.EXAMPLES_ROOT_DIRECTORY;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 
@@ -78,6 +75,15 @@ public class ParserTest {
         compilationSuccessful(readFromFile("while.txt"));
     }
 
+    @Test
+    void reorderStatement() throws Exception {
+        compilationSuccessful(readFromFile("reorder.txt"));
+    }
+
+    @Test
+    void sliceAndConcatStatement() throws Exception {
+        compilationSuccessful(readFromFile("sliceAndConcat.txt"));
+    }
 
     private void compilationSuccessful(String input) throws Exception {
         assertThat(scan(input).sym).isEqualTo(ParserSym.EOF);
@@ -92,9 +98,12 @@ public class ParserTest {
     }
 
     private String readFromFile(String fileName) throws IOException {
-        URL url = new URL(EXAMPLES_ROOT_DIRECTORY + "/%s".formatted(fileName));
-        assertThat(url).isNotNull();
-        return IOUtils.toString(url.openStream(), StandardCharsets.UTF_8);
+        File file = new File("src/test/java/resources/" + fileName);
+
+        if (!file.exists()) {
+            throw new IOException("El archivo no existe: " + file.getAbsolutePath());
+        }
+        return Files.readString(file.toPath(), StandardCharsets.UTF_8);
     }
 
 
